packages/ui/src/components/Header/Header.module.css
/*
 * Copyright 2025 The Backstage Authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

@layer tokens, base, components, utilities;

@layer components {
  .bui-Header {
    display: flex;
    flex-direction: column;
    gap: var(--bui-space-1);
    margin-top: var(--bui-space-6);
  }

  .bui-HeaderContent {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
  }

  .bui-HeaderTabsWrapper {
    margin-left: -8px;
  }

  .bui-HeaderControls {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: var(--bui-space-2);
  }

  .bui-HeaderBreadcrumbs {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: var(--bui-space-2);
  }

  .bui-HeaderTags {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: var(--bui-space-2);
    flex-wrap: wrap;
  }

  .bui-HeaderTagDivider {
    width: 3px;
    height: 3px;
    border-radius: 50%;
    background-color: var(--bui-fg-secondary);
    flex-shrink: 0;
  }

  .bui-HeaderMetaRow {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 20px;
    flex-wrap: wrap;
  }
}

